[package]
name = "gh-cal"
version = "0.1.3"
edition = "2021"
description = "View your github contribution calander in unicode"
authors = ["marshmallow <marshycity@gmail.com>"]
repository = "https://github.com/mrshmllow/gh-cal"
license-file = "LICENSE"
keywords = ["cli", "github", "git"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.13.0"
transpose = "0.2.1"
clap = { version = "3.1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
terminal_size = "0.1.17"
